removed resume from bottom

--- a/index.html
+++ b/index.html
@@ -254,7 +254,7 @@
                     <div class="contact-left">
                         <h1 class="sub-title">Contact Me!</h1>
                         <p>Feel free to send me a message about any opportunities, questions, or
-                            if you want to connect or click below for a copy of my resume.
+                            if you want to connect.
                         </p>
                         <p><i class="fa-solid fa-paper-plane"></i> echang22@berkeley.edu</p> 
                         <!--icon to send you back to the top of page-->
