added link to resume

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                         <li><a href="#experience">Experience</a></li>
                         <li><a href="#portfolio">Portfolio</a></li>
                         <li><a href="#contact">Contact</a></li>
-                        <li><a href="Images/cv_placeholder.pdf" target="_blank">Resume</a></li>
+                        <li><a href="https://drive.google.com/file/d/1IgIBn-I6nxI7tKMsIJiUzWkLES7mpcrT/view?usp=sharing" target="_blank">Resume</a></li>
                         <i class="fa-solid fa-xmark" onclick="closemenu()"></i>
                     </ul>
                     <i class="fa-solid fa-bars" onclick="openmenu()"></i>
