added jpge file name to html

--- a/index.html
+++ b/index.html
@@ -224,14 +224,14 @@
                         </div>
                     </div>
                     <div class="work">
-                        <img src="Images/taiwan.jpg">
+                        <img src="Images/taiwan.jpeg">
                         <div class="layer">
                             <h3><i class="fa-solid fa-location-pin"></i> Tamsui River, TP, Taiwan</h3>
                             <p>12/2023</p>
                         </div>
                     </div>
                     <div class="work">
-                        <img src="Images/sfflowers.jpg">
+                        <img src="Images/sfflowers.jpeg">
                         <div class="layer">
                             <h3><i class="fa-solid fa-location-pin"></i> Golden Gate Park, SF, CA</h3>
                             <p>08/2023</p>
