changed file types

--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
                 </div>
                 <div class="exp-wrap">
                     <div class="exp-col-left">
-                        <img src="Images/ighotaLogo copy.jpg">
+                        <img src="Images/ighotaLogo copy.png">
                     </div>
                     <div class="exp-col-right">
                         <h2>Chief Technology Officer</h2>
