changed portrait photo

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                         </div>
                     </div>
                     <div class="about-col-2">
-                        <img src="Images/portraitphoto.jpeg">
+                        <img src="Images/portraitphoto2.jpeg">
                     </div>
                 </div>
             </div>
