changed photo sizes, changed container padding, added new mobile version photo

--- a/index.html
+++ b/index.html
@@ -71,10 +71,9 @@
                         </div>
                         <div class="tab-contents active-tab" id="knowledge">
                             <ul>
-                                <li><span>Programming</span><br>Python, Java, SQL</li>
-                                <li><span>Design</span><br>Client Designs, Desinging Interfaces, Figma</li>
-                                <li><span>Web Development</span><br>HTML, CSS, JavaScript/jQuery, React.js</li>
-                                <li><span>Data Science</span><br>Pandas, Sklearn, Data Visualizations & Analysis, Machine Learning</li>
+                                <li><span>Programming</span><br>Python, Java, SQL, HTML, CSS, JavaScript/jQuery, React.js</li>
+                                <li><span>Design</span><br>Client Designs, Designing Interfaces, Figma</li>
+                                <li><span>Data Science</span><br>Pandas, Sklearn, Data Visualizations & Analysis</li>
                             </ul>
                         </div>
                         <div class="tab-contents" id="skills">
@@ -87,7 +86,7 @@
                         <div class="tab-contents" id="interests">
                             <ul>
                                 <li><span>Graphic Design</span><br>Visual Designing</li>
-                                <li><span>Photography</span><br>Landscape Sketching on the side</li>
+                                <li><span>Photography</span><br>Landscape Sketching</li>
                                 <li><span>Social Good</span><br>Business/Entrepreneurship</li>
                             </ul>
                         </div>
@@ -123,9 +122,8 @@
                         <p>@ Ighota! Virtual Learning | June 2024 - Present</p><br>
                         <li>Closely maintain active communication with our 8+ educators, ensuring effective collaboration with our partnered Nigerian institutions overseas</li>
                         <li>Designed and programmed the new website redesign for the official 2024 launch</li>
-                        <li>Previously VP since founding in June 2021; worked on launching organization to partnered schools; outreached to several educational organizations;
-                            designed numerous graphic review sheets for over 600 students in Nigeria
-                        </li>
+                        <li>Previously VP since founding in June 2021; worked on launching organization to partnered schools
+                        <li>Outreached to several educational organizations;  designed numerous graphic review sheets for over 600 students in Nigeria</li>
                     </div>
                 </div>
                 <div class="exp-wrap">
@@ -222,13 +220,6 @@
                         <div class="layer">
                             <h3><i class="fa-solid fa-location-pin"></i>  Tamsui River, TP, Taiwan</h3>
                             <p>12/2023</p>
-                        </div>
-                    </div>
-                    <div class="work">
-                        <img src="Images/sfflowers.jpeg">
-                        <div class="layer">
-                            <h3><i class="fa-solid fa-location-pin"></i>  Golden Gate Park, SF, CA</h3>
-                            <p>08/2023</p>
                             <!--<a href='#'><i class="fa-solid fa-arrow-up-right-from-square"></i></a> 
                             this was the old arrow symbol to link somewhere-->
                         </div>
@@ -290,7 +281,8 @@
             
         </script>
 
-        <!--------Script received from https://github.com/jamiewilson/form-to-google-sheets to send submitted info from website to a google sheet-->
+        <!--------Script to send submitted info from website to a google sheet-->
+        <!--
         <script>
             const scriptURL = 'https://script.google.com/macros/s/AKfycbxo49ekEfg4yCmphhE9Gx8qSb8vrBW8-BTAuHH9B8D0pCsl_6PoB5ETJ_FaanAFaCp2Pg/exec'
             const form = document.forms['submit-to-google-sheet']
@@ -309,6 +301,7 @@
                 .catch(error => console.error('Error!', error.message))
             })
         </script>
+        -->
 
     </body>
 </html>
